--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 
     <!-- Vendor CSS Files -->
     <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet" />
-    <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
+    <link href="vendor/icofont/icofont.min.css" rel="stylesheet" />
+    <link href="vendor/animate.css/animate.min.css" rel="stylesheet" />
     <link
-      href="assets/vendor/font-awesome/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="assets/vendor/nivo-slider/css/nivo-slider.css"
+      href="vendor/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
     />
     <link
-      href="assets/vendor/owl.carousel/assets/owl.carousel.min.css"
+      href="vendor/nivo-slider/css/nivo-slider.css"
       rel="stylesheet"
     />
-    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" />
+    <link
+      href="vendor/owl.carousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
+    <link href="vendor/venobox/venobox.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
@@ -57,7 +57,7 @@
             <a href="index.html"><span>e</span>Business</a>
           </h1>
           <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+          <!-- <a href="index.html"><img src="img/logo.png" alt="" class="img-fluid"></a>-->
         </div>
 
         <nav class="nav-menu d-none d-lg-block">
@@ -79,17 +79,17 @@
       <div class="bend niceties preview-2">
         <div id="ensign-nivoslider" class="slides">
           <img
-            src="assets/img/slider/slider1.jpg"
+            src="img/slider/slider1.jpg"
             alt=""
             title="#slider-direction-1"
           />
           <img
-            src="assets/img/slider/slider2.jpg"
+            src="img/slider/slider2.jpg"
             alt=""
             title="#slider-direction-2"
           />
           <img
-            src="assets/img/slider/slider3.jpg"
+            src="img/slider/slider3.jpg"
             alt=""
             title="#slider-direction-3"
           />
@@ -244,7 +244,7 @@
               <div class="well-left">
                 <div class="single-well">
                   <a href="#">
-                    <img src="assets/img/about/1.jpg" alt="" />
+                    <img src="img/about/1.jpg" alt="" />
                   </a>
                 </div>
               </div>
@@ -632,22 +632,22 @@
                   <h4>Instagram</h4>
                   <div class="flicker-img">
                     <a href="#"
-                      ><img src="assets/img/portfolio/1.jpg" alt=""
+                      ><img src="img/portfolio/1.jpg" alt=""
                     /></a>
                     <a href="#"
-                      ><img src="assets/img/portfolio/2.jpg" alt=""
+                      ><img src="img/portfolio/2.jpg" alt=""
                     /></a>
                     <a href="#"
-                      ><img src="assets/img/portfolio/3.jpg" alt=""
+                      ><img src="img/portfolio/3.jpg" alt=""
                     /></a>
                     <a href="#"
-                      ><img src="assets/img/portfolio/4.jpg" alt=""
+                      ><img src="img/portfolio/4.jpg" alt=""
                     /></a>
                     <a href="#"
-                      ><img src="assets/img/portfolio/5.jpg" alt=""
+                      ><img src="img/portfolio/5.jpg" alt=""
                     /></a>
                     <a href="#"
-                      ><img src="assets/img/portfolio/6.jpg" alt=""
+                      ><img src="img/portfolio/6.jpg" alt=""
                     /></a>
                   </div>
                 </div>
@@ -686,20 +686,20 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/appear/jquery.appear.js"></script>
-    <script src="assets/vendor/knob/jquery.knob.js"></script>
-    <script src="assets/vendor/parallax/parallax.js"></script>
-    <script src="assets/vendor/wow/wow.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/nivo-slider/js/jquery.nivo.slider.js"></script>
-    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="vendor/php-email-form/validate.js"></script>
+    <script src="vendor/appear/jquery.appear.js"></script>
+    <script src="vendor/knob/jquery.knob.js"></script>
+    <script src="vendor/parallax/parallax.js"></script>
+    <script src="vendor/wow/wow.min.js"></script>
+    <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="vendor/nivo-slider/js/jquery.nivo.slider.js"></script>
+    <script src="vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="vendor/venobox/venobox.min.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
