--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link href="vendor/venobox/venobox.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 
     <!-- =======================================================
   * Template Name: eBusiness - v2.1.1
